--- a/landmarks.yaml
+++ b/landmarks.yaml
@@ -99,7 +99,7 @@
   lat:   38.3208516
   long:  -123.0493641
 -
-  name:  NE bay cities
+  name:  NE Bay cities
   lat:   37.8628605
   long:  -122.3176146
 -
@@ -115,7 +115,7 @@
   lat:   37.3203457
   long:  -122.1871948
 -
-  name:  Monterey bay
+  name:  Monterey Bay
   lat:   36.8524281
   long:  -121.8111277
 -
@@ -171,11 +171,11 @@
   lat:   37.6818314
   long:  -121.7680588
 -
-  name:  East bay hills
+  name:  East Bay hills
   lat:   37.686676
   long:  -121.6400671
 -
-  name:  East bay hills
+  name:  East Bay hills
   lat:   37.9236178
   long:  -122.1968079
 -
@@ -207,11 +207,11 @@
   lat:   38.2208818
   long:  -122.3946905
 -
-  name:  East bay shore
+  name:  East Bay shore
   lat:   37.6436652
   long:  -122.1494293
 -
-  name:  East bay hills
+  name:  East Bay hills
   lat:   37.8930465
   long:  -122.2434998
 -
@@ -243,7 +243,7 @@
   lat:   38.3432319
   long:  -122.6725325
 -
-  name:  East bay shore
+  name:  East Bay shore
   lat:   37.5534227
   long:  -122.0875902
 -
@@ -271,7 +271,7 @@
   lat:   38.4398755
   long:  -122.7668095
 -
-  name:  East bay hills
+  name:  East Bay hills
   lat:   37.7069116
   long:  -121.559
 -
@@ -347,15 +347,15 @@
   lat:   38.2349441
   long:  -123.5110474
 -
-  name:  East bay shore
+  name:  East Bay shore
   lat:   37.4734276
   long:  -121.9504952
 -
-  name:  East bay shore
+  name:  East Bay shore
   lat:   37.5478778
   long:  -121.9604301
 -
-  name:  Marin bay
+  name:  Marin Bay
   lat:   37.9908905
   long:  -122.5687027
 -
@@ -379,7 +379,7 @@
   lat:   38.2092195
   long:  -122.5135231
 -
-  name:  NE bay cities
+  name:  NE Bay cities
   lat:   37.855
   long:  -122.2891667  
 -
@@ -391,7 +391,7 @@
   lat:   37.7381243
   long:  -122.3725462
 -
-  name:  Silicon valley
+  name:  Silicon Valley
   lat:   37.4348798
   long:  -122.1947157
 -
@@ -403,11 +403,11 @@
   lat:   38.3511476
   long:  -122.9564095
 -
-  name:  East bay hills  
+  name:  East Bay hills  
   lat:   37.8693993
   long:  -122.2366494
 -
-  name:  Marin bay
+  name:  Marin Bay
   lat:   37.8621151
   long:  -122.4330139
 -
@@ -430,3 +430,113 @@
   name:  Half Moon Bay
   lat:   37.601498
   long:  -122.5002678
+-
+  name:  East Bay shore
+  lat:   37.4948137
+  long:  -121.9760406
+-
+  name:  Stockton + flats
+  lat:   37.8362253
+  long:  -121.5814877
+-
+  name:  Marin Bay
+  lat:   38.0274109
+  long:  -122.515583
+-
+  name:  Hill around Napa
+  lat:   38.4868525
+  long:  -122.3617744
+-
+  name:  Would be Skyline
+  lat:   37.6194441
+  long:  -122.4879456
+-
+  name:  OSPs
+  lat:   37.2945979
+  long:  -122.0814396
+-
+  name:  SC hills
+  lat:   37.1963561
+  long:  -122.2032237
+-
+  name:  Solano flats
+  lat:   38.1468426
+  long:  -121.9815445
+-
+  name:  NapaSonoma
+  lat:   38.2470278
+  long:  -122.796464
+-
+  name:  East Bay cities
+  lat:   37.8054779
+  long:  -122.3259401
+-
+  name:  Hill around Napa
+  lat:   38.6266609
+  long:  -122.3885536
+-
+  name:  Sloughs
+  lat:   37.5220482
+  long:  -122.2501087
+-
+  name:  Santa Cruz
+  lat:   36.956202
+  long:  -122.0896912
+-
+  name:  Hill around Napa
+  lat:   38.8199161
+  long:  -122.9898834
+-
+  name:  East Bay cities
+  lat:   37.8101141
+  long:  -122.2140635
+-
+  name:  Hill around Napa
+  lat:   38.6646032
+  long:  -122.2537994
+-
+  name:  Sloughs
+  lat:   37.5065598
+  long:  -122.2461176
+-
+  name:  SC hills
+  lat:   37.1555945
+  long:  -122.1273172
+-
+  name:  NapaSonoma
+  lat:   38.454933
+  long:  -122.6523972
+-
+  name:  East Bay shore
+  lat:   37.5327708
+  long:  -122.0698932
+-
+  name:  Would be Skyline
+  lat:   37.586896
+  long:  -122.487779
+-
+  name:  Coast
+  lat:   37.16967
+  long:  -122.3570162
+-
+  name:  SC hills
+  lat:   37.1866308
+  long:  -122.338695
+-
+  name:  SE hills
+  lat:   37.0006248
+  long:  -121.7483693
+-
+  name:  SE hills
+  lat:   36.9984399
+  long:  -121.7394161
+-
+  name:  SC hills
+  lat:   37.0383933
+  long:  -122.0559597
+-
+  name:  Monterey Bay
+  lat:   36.9345941
+  long:  -121.6873598
+
+
